test/sematest/invalid/main_method_invoc.java
class A {
    public int field;
    public int method() {return 0;}
    public static void main(String[] args) {
        method();
    }
}
